--- a/gb/12/1/25/n3495017.md
+++ b/gb/12/1/25/n3495017.md
@@ -1,54 +1,72 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nlcjgi318/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nlcjgi318/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nlcjgi318/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nlcjgi318/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nlcjgi318/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nlcjgi318/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>夺命有先兆 想逃逃不掉</h2>
 
 <h6></h6>
 <hr>
-<p>在这大千世界，越来越多的人相信，有些事情在冥冥之中已经被安排好的。</p> <p>一位大货车司机讲了他亲身经历的一件离奇事。</p> <p>他是位非常稳重而又技术娴熟的司机，很相信灵异之事。每次出门都细心检查车况，并请求神佛保佑。多年出车从没有出过什么麻烦事。</p> <p>有一天晚上，他做了一个非常奇怪的梦，梦见他在开车路上把一位穿碎花衣服的女子给撞死了。醒了以后那个惨景还历历在目，甚至撞人瞬间周围的景色和被撞女子的样子都能非常清楚的回忆起来，好像这事真的发生过似的。他很恐惧和沮丧，决定今天不再动车。刚想到单位去请假，可领导这时却找上门来，说有一批货需尽快给人家送去，本来想安排让别人去，结果凑巧那人突然病了，实在没别的人手，只好麻烦他跑一趟了。</p> <p>这位司机是个非常实在的人，领导专门来找他，他觉得不能不去，于是硬着头皮答应了。临出门的时候，爱人千叮万嘱要他路上小心。</p> <p>车开到半路，他突然大吃一惊，他前面的路线，和梦中的完全一样！他车开得很慢，像牛一样，汽车发动机发出的声音，像病人的喘息。</p> <p>前面出现的房子正是他梦中撞人的地方。他不敢再往前开，干脆把车停在离房子约有30米远的路边。车刚停下，就从房子后面走出一位妙龄女子，穿着打扮和他梦中的情景分毫不差。他下了车，迎着女子走过去，“大姊大姊，能跟您商量个事吗？”</p> <p>“什么事？”</p> <p>“您这件碎花衣服非常好看，我特别喜欢，我多出点钱，您能卖给我吗？”</p> <p>“&#8230;&#8230;我，里面就秋衣了，不好看呀！不卖！”</p> <p>“您这衣服多少钱买的？我出三倍的钱买！”</p> <p>“&#8230;&#8230;”</p> <p>“五倍买您的！”</p> <p>女子动心了，把碎花衣服卖给了他。“大姐，这衣服归我了，我怎么处理您别管，您现在马上回家，哪儿也别去！”</p> <p>他把衣服平放在车轮前面，开上车，从衣服上压了过去。</p> <p>车开了一会儿，他不放心，又把车停在一边，走回去想再看一看。远远的，他看到那个女子捡起那件衣服，穿在身上！他刚想跑过去制止，后面又突然疾驶过来一辆大卡车，只听“哎呀”一声，女子倒在血泊之中。</p> <p>这故事，让人听得毛骨悚然，唏嘘不已&#8230;&#8230;</p> <p>－－摘编自正见网</p> 
+<p>在这大千世界，越来越多的人相信，有些事情在冥冥之中已经被安排好的。</p>
+<p>一位大货车司机讲了他亲身经历的一件离奇事。</p>
+<p>他是位非常稳重而又技术娴熟的司机，很相信灵异之事。每次出门都细心检查车况，并请求神佛保佑。多年出车从没有出过什么麻烦事。</p>
+<p>有一天晚上，他做了一个非常奇怪的梦，梦见他在开车路上把一位穿碎花衣服的女子给撞死了。醒了以后那个惨景还历历在目，甚至撞人瞬间周围的景色和被撞女子的样子都能非常清楚的回忆起来，好像这事真的发生过似的。他很恐惧和沮丧，决定今天不再动车。刚想到单位去请假，可领导这时却找上门来，说有一批货需尽快给人家送去，本来想安排让别人去，结果凑巧那人突然病了，实在没别的人手，只好麻烦他跑一趟了。</p>
+<p>这位司机是个非常实在的人，领导专门来找他，他觉得不能不去，于是硬着头皮答应了。临出门的时候，爱人千叮万嘱要他路上小心。</p>
+<p>车开到半路，他突然大吃一惊，他前面的路线，和梦中的完全一样！他车开得很慢，像牛一样，汽车发动机发出的声音，像病人的喘息。</p>
+<p>前面出现的房子正是他梦中撞人的地方。他不敢再往前开，干脆把车停在离房子约有30米远的路边。车刚停下，就从房子后面走出一位妙龄女子，穿着打扮和他梦中的情景分毫不差。他下了车，迎着女子走过去，“大姊大姊，能跟您商量个事吗？”</p>
+<p>“什么事？”</p>
+<p>“您这件碎花衣服非常好看，我特别喜欢，我多出点钱，您能卖给我吗？”</p>
+<p>“&#8230;&#8230;我，里面就秋衣了，不好看呀！不卖！”</p>
+<p>“您这衣服多少钱买的？我出三倍的钱买！”</p>
+<p>“&#8230;&#8230;”</p>
+<p>“五倍买您的！”</p>
+<p>女子动心了，把碎花衣服卖给了他。“大姐，这衣服归我了，我怎么处理您别管，您现在马上回家，哪儿也别去！”</p>
+<p>他把衣服平放在车轮前面，开上车，从衣服上压了过去。</p>
+<p>车开了一会儿，他不放心，又把车停在一边，走回去想再看一看。远远的，他看到那个女子捡起那件衣服，穿在身上！他刚想跑过去制止，后面又突然疾驶过来一辆大卡车，只听“哎呀”一声，女子倒在血泊之中。</p>
+<p>这故事，让人听得毛骨悚然，唏嘘不已&#8230;&#8230;</p>
+<p>－－摘编自正见网</p>
+
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/1/19/n2791368.md#1">冥冥之中有定数：状元锦袍之奇梦</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/2/15/n2820457.md#1">冥冥之中有定数：星坠贼亡</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/3/17/n2848365.md#1">冥冥之中有定数：两位宰相的命运</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/3/31/n2863214.md#1">四十七年历经七死七生  罪尽福至</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/4/19/n2881583.md#1">冥冥之中有定数：玉璧与夫子瓮</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/10/29/n3069352.md#1">冥冥之中有定数：逃不掉的脊杖</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/11/21/n3091170.md#1">冥冥之中有定数：奇道人怒责魏忠贤</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/11/27/n3097258.md#1">道士神游天曹见榜单 北宋大臣改名早注定</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/1/19/n2791368.md#1">冥冥之中有定数：状元锦袍之奇梦</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/2/15/n2820457.md#1">冥冥之中有定数：星坠贼亡</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/3/17/n2848365.md#1">冥冥之中有定数：两位宰相的命运</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/3/31/n2863214.md#1">四十七年历经七死七生  罪尽福至</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881583.md#1">冥冥之中有定数：玉璧与夫子瓮</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/10/29/n3069352.md#1">冥冥之中有定数：逃不掉的脊杖</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/21/n3091170.md#1">冥冥之中有定数：奇道人怒责魏忠贤</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/27/n3097258.md#1">道士神游天曹见榜单 北宋大臣改名早注定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/14/n11656265.md#1" target="_blank">杨宁：东德国防部长之选择给中共军方的启示</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/2/n10272258.md#1" target="_blank">杨宁：庆祝毛死去的年轻人被判死缓后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/2/26/n12777823.md#1">老翁用一计 让富家子败光了财产 结果感人</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/2/28/n12780478.md#1">预言试析：从大禹治水看到三峡大坝的命运？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12813067.md#1">【探索时分】美国预备役多强大 世界军事第二？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12813463.md#1">【远见快评】美军拟定六红线 中共讹诈台海玩火</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/16/n12814184.md#1">【珍言真语】姚冠东：坚持表达 香港创作前景仍在</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/8/n12796136.md#1">需要更换家中Wi-Fi路由器的四个理由</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/13/n12809630.md#1">曾揭江泽民二奸二假的学者吕加平因病去世</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810014.md#1">吴俊宏补办婚礼面子大 台语歌坛大咖齐聚祝贺</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12811023.md#1">患抑郁症身材发福遭酸 马思纯高EQ回应</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810818.md#1">杨紫着曳地长裙走红毯 裙?下露出黑色马丁靴</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810940.md#1">儿子走路撞到树直呼痛 严立婷教育方法获爆赞</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812179.md#1">林俊逸自曝气喘狂咳 下台急戴氧气筒送医</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810261.md#1">女童讲前世记忆：911事件在世贸大楼遇难</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812087.md#1">美军传奇狙击手 如何在越战中歼灭女对手？</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12809857.md#1">驼背带来9大坏处！简单2招 轻松矫正驼背</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/14/n12810193.md#1">人死了会发生什么事？ 网民聊得很起劲</a></li>
-<li><a href="https://github.com/nlcjgi318/djy/blob/master/gb/21/3/15/n12812244.md#1">只有25岁以下的人才听得到这种声音？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nlcjgi318/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nlcjgi318/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/1/25/n3495017.htm">夺命有先兆 想逃逃不掉</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/1/25/n3495017.htm">夺命有先兆 想逃逃不掉</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nlcjgi318/djy/blob/master/gb/12/1/25/n3495017.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nlcjgi318/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nlcjgi318/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nlcjgi318/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nlcjgi318/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nlcjgi318/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/12/1/25/n3495017.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
